@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.194 2005/08/02 11:23:27 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.195 2005/08/02 13:43:04 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -44,6 +44,11 @@ PH/11 Added support for the IGNOREQUOTA extension to LMTP, both to the lmtp
       transport and to the smtp transport in LMTP mode.
 
 TK/02 Remove one case of BASE64 error detection FTTB (undocumented anyway).
+
+PH/12 There was a missing call to search_tidyup() before the fork() in rda.c to
+      run a filter in a subprocess. This could lead to confusion in subsequent
+      lookups in the parent process. There should also be a search_tidyup() at
+      the end of the subprocess.
 
 
 Exim version 4.52
